# DevCouncil

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  DevCouncil-blog.md  DevCouncil-linkedin.md  DevCouncil_Implementation_Plan.md  IMPROVEMENTS.md  LICENSE  README.md  RESUME_PORTFOLIO_POINTS_2026.md  package.json  pyproject.toml
.devcouncil/: config.yaml  graphify.yaml  secrets.env.example
.github/workflows/: ci.yml  codeintel-platform.yml  codeql.yml  devcouncil-evidence.yml  npm-publish.yml
benchmarks/: README.md  _decprobe.py  _validate.py  analyze.py  calibration_dashboard.py  local_monitor_probe.py  run_bench.py  tasks.py
docs/: anti-laziness-rigor.md  architecture.md  artifact-graph.md  build-week-demo.md  build-week-devpost-draft.md  build-week-judge-checklist.md  certified-paths.md  cli-reference.md  code-graph.md  codeintel-performance.md  coding-cli-integration.md  corpus.md  executor-adapters.md  executor-hardening-parity.md  gating-policy.md  hero-loop.md  integration-tiers.md  knowledge-formats.md  live-review.md  model-routing.md  openai-build-week-2-hour-plan.md  project-status.md  quickstart.md  roadmap.md  security.md  workflow.md
docs/architecture/: artifact-graph.md  codebase.md  gating-state-machine.md  orchestration.md
examples/build-week-demo/: README.md  broken_calc.py  calc.py  test_calc.py
examples/password-reset/: expected-report.md  flawed-implementation-notes.md  goal.md
examples/todo-api/: expected-report.md  goal.md
scripts/: build-codeintel-grammar-wheel.py  build-week-demo.sh  check-wheel-assets.py  codeintel-benchmark.py  install-node-debug-adapter.py  install.ps1  install.sh  npm-runtime-smoke.mjs  smoke-wheel.py
src/devcouncil/: __main__.py  hardware.py
src/devcouncil/app/: __init__.py  config.py  errors.py  events.py  orchestrator.py  project_status.py  run_context.py  state_machine.py
src/devcouncil/artifacts/: __init__.py  coverage.py  graph.py  migrations.py  schemas.py  serializer.py  validators.py
src/devcouncil/assets/: __init__.py
src/devcouncil/campaign/: __init__.py  bloom.py  dashboard.py  mailbox.py  notify.py  orchestrator.py  roles.py  watcher.py
src/devcouncil/cli/: main.py
src/devcouncil/codeintel/: __init__.py  build_control.py  build_worker.py  service.py
src/devcouncil/council/: __init__.py
src/devcouncil/domain/: assumption.py  checkpoint_refs.py  critique.py  evidence.py  gap.py  requirement.py  task.py
src/devcouncil/execution/: checkpoints.py  context_builder.py  executor.py  fs_watcher.py  gated_write.py  handoff.py  hook_policy.py  lease_ops.py  lease_validation.py  patch.py  paths.py  permissions.py  policy_engine.py  prompt_builder.py  run_trace.py  shell_session.py  stop_gate.py  stop_gate_history.py  stop_gate_state.py  stop_gate_verify_cache.py  task_gate_ops.py  task_runner.py
src/devcouncil/executors/: advisor_tool.py  agent_registry.py  claude_sdk.py  coding_cli.py  mini_swe.py  openhands.py  transient_retry.py
src/devcouncil/gating/: policy.py
src/devcouncil/indexing/: ast_matcher.py  graph_index.py  lsp.py  lsp_client.py  map_artifacts.py  map_refresh.py  repo_mapper.py  semantic_index.py  subsystem_map.py  ts_imports.py  viz.py  walk.py  wiring.py
src/devcouncil/integrations/: actions.py  check.py  claude_assets.py  code_review_graph.py  github.py  github_intent.py  gitnexus.py  graphify.py  integration_cli.py  opencode_devcouncil_plugin.mjs  pr_comments.py  setup.py
src/devcouncil/knowledge/: __init__.py  design.py  design_conformance.py  fetch.py  frontmatter.py  knowledge_select.py  okf.py  resource_discovery.py  skill_bridge.py  sources.py  wiki.py  wiki_read.py
src/devcouncil/live/: __init__.py  cards.py  models.py  repair_prompt.py  reviewer.py  signals.py  summary.py  tasks.py  transcripts.py
src/devcouncil/llm/: cache.py  model_defaults.yaml  provider.py  router.py  semantic_bridge.py
src/devcouncil/optimization/: __init__.py  gepa_agent.py  skillopt.py
src/devcouncil/planning/: arbiter_service.py  correction_manifest.py  critique_service.py  plan_difficulty.py  plan_service.py  planned_files_reconcile.py  prompt_enhancer_service.py  question_conversion.py  repair_service.py  spec_service.py
src/devcouncil/repo/: ci_scaffold.py  gitignore.py  sca.py
src/devcouncil/reporting/: evidence_export.py  evidence_html.py  github_check.py  json_report.py  markdown_report.py  mcp_resources.py  okf_bundle_writer.py  okf_html.py  report_builder.py  task_provenance.py  verdict.py
src/devcouncil/shogun/: __init__.py  bloom.py  dashboard.py  (+5 more)
src/semantic_layer/: __init__.py  benchmark.py  cache.py  compressor.py  config.py  embeddings.py  llm_backends.py  pipeline.py  router.py  tuner.py
tests/: conftest.py
tests/benchmarks/: test_map_caps.py
tests/campaign/: test_bloom.py  test_mailbox.py  test_orchestrator.py  test_roles.py  test_watcher.py
tests/integration/: test_codeintel_platform_runtime.py
tests/performance/: __init__.py  benchmark_harness.py  test_codeintel_benchmark.py  thresholds.json
tests/shogun/: test_bloom.py  test_mailbox.py  test_orchestrator.py  test_roles.py  test_watcher.py
tests/unit/: _gate_rewrite_wave6.py  _patch_coverage_omit.py  _patch_unwired_cap.py  test_ac_backfill.py  test_acceptance.py  test_acceptance_compiler.py  test_ad_hoc_check.py  test_advisor_tool.py  test_agents_cli_branches.py  test_artifact_graph.py  test_artifact_helpers.py  test_ast_matcher_ts.py  test_audit_fixes.py  test_bench_calibration.py  test_campaign_command.py  test_campaign_watcher_mailbox.py  test_check_cli_coverage.py  test_check_command.py  test_checkout_map_refresh.py  test_checkpoints.py  test_ci_scaffold.py  test_ci_scaffold_evidence.py  test_claim_mapper_fixtures.py  test_claims_checks_helpers.py  test_claims_transcript.py  test_claude_assets.py  test_claude_sdk_executor.py  test_cli_boot.py  test_cli_campaign.py  test_cli_check_gate.py  test_cli_commands.py  test_cli_cost.py  test_cli_doctor.py  test_cli_gated_write.py  test_cli_go.py  test_cli_graph.py  test_cli_handoff.py  test_cli_lease.py  test_cli_logs.py  test_cli_machine_channel.py  (+275 more)
(+269 files in other folders)
