[project]
name = "devcouncil"
version = "0.3.1"
description = "Gated orchestrator for AI-assisted software development"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.3",
    "rich>=13.7.1",
    "pydantic>=2.7.1",
    "pyyaml>=6.0.1",
    "sqlmodel>=0.0.19",
    "httpx>=0.27.0",
    "gitpython>=3.1.49",
    "mcp>=1.28.1",
    "gepa>=0.1.1",
    "watchdog>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/bharathvbcr/DevCouncil"
Repository = "https://github.com/bharathvbcr/DevCouncil.git"
Issues = "https://github.com/bharathvbcr/DevCouncil/issues"

[project.scripts]
dev = "devcouncil.cli.main:app"
devcouncil = "devcouncil.cli.main:app"

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.4.4",
    "mypy>=1.10.0",
    "types-pyyaml>=6.0.12.20260408",
    # Used only to exercise the diff↔coverage path end-to-end in tests. DevCouncil
    # never requires coverage at runtime — it uses whatever the target repo provides.
    "coverage>=7.4",
]

[tool.uv]
# Security floors for transitive dependencies (Dependabot advisories, 2026-06).
# These are not direct deps; constraint-dependencies pins their minimum patched
# version in the resolver without adding them to the dependency tree, so they can
# never resolve back below the fix.
constraint-dependencies = [
    "cryptography>=48.0.1",
    "starlette>=1.3.1",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.31",
    "pydantic-settings>=2.14.2",
    "idna>=3.15",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/devcouncil"]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.force-include]
"src/devcouncil/llm/model_defaults.yaml" = "devcouncil/llm/model_defaults.yaml"
"src/devcouncil/telemetry/model_pricing.yaml" = "devcouncil/telemetry/model_pricing.yaml"
"src/devcouncil/assets/devcouncil-logo.svg" = "devcouncil/assets/devcouncil-logo.svg"
"src/devcouncil/assets/devcouncil_logo_premium.png" = "devcouncil/assets/devcouncil_logo_premium.png"
"src/devcouncil/integrations/opencode_devcouncil_plugin.mjs" = "devcouncil/integrations/opencode_devcouncil_plugin.mjs"
