[project]
name = "devcouncil"
version = "0.3.1"
description = "Gated orchestrator for AI-assisted software development"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.3",
    "rich>=13.7.1",
    "pydantic>=2.7.1",
    "pyyaml>=6.0.1",
    "sqlmodel>=0.0.19",
    "httpx>=0.27.0",
    "gitpython>=3.1.49",
    "mcp>=1.27.2",
    "gepa>=0.1.1",
    "watchdog>=4.0.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-language-pack>=1.12.5",
    "networkx>=3.3",
]

[project.optional-dependencies]
# Platform wheel containing the complete, checksum-manifested Tree-sitter cache.
# The core package remains useful with locally installed grammars; release builds
# install this extra to guarantee the full code-intelligence language matrix.
codeintel-full = ["devcouncil-codeintel-grammars==0.3.1"]

[project.urls]
Homepage = "https://github.com/bharathvbcr/DevCouncil"
Repository = "https://github.com/bharathvbcr/DevCouncil.git"
Issues = "https://github.com/bharathvbcr/DevCouncil/issues"

[project.scripts]
dev = "devcouncil.cli.main:run_cli"
devcouncil = "devcouncil.cli.main:run_cli"

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.4.4",
    "mypy>=1.10.0",
    "types-pyyaml>=6.0.12.20260408",
    # Used only to exercise the diff↔coverage path end-to-end in tests. DevCouncil
    # never requires coverage at runtime — it uses whatever the target repo provides.
    "coverage>=7.4",
    # Required for semantic_layer unit tests (cache FAISS backend).
    "faiss-cpu>=1.8.0",
    "numpy>=1.26.0",
]
platform-test = [
    # Required only by the real Debug Adapter Protocol integration matrix.
    "debugpy>=1.8.0",
]
semantic = [
    "sentence-transformers>=3.0.0",
    "faiss-cpu>=1.8.0",
    "numpy>=1.26.0",
    "torch>=2.2.0",
]

[tool.uv]
# Security floors for transitive dependencies (Dependabot advisories, 2026-06).
# These are not direct deps; constraint-dependencies pins their minimum patched
# version in the resolver without adding them to the dependency tree, so they can
# never resolve back below the fix.
constraint-dependencies = [
    "cryptography>=48.0.1",
    "starlette>=1.3.1",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.31",
    "pydantic-settings>=2.14.2",
    "idna>=3.15",
    "setuptools>=83.0.0",
]

[tool.uv.workspace]
members = ["packages/codeintel-grammars"]

[tool.uv.sources]
devcouncil-codeintel-grammars = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/devcouncil"]
branch = true
# Gate focuses on stable units; large CLI/orchestration glue is exercised by CLI tests.
omit = [
    "*/cli/commands/graph_cmd.py",
    "*/cli/commands/plan.py",
    "*/cli/commands/map.py",
    "*/cli/commands/doctor.py",
    "*/cli/commands/hook.py",
    "*/cli/commands/integrate.py",
    "*/codeintel/sync/coordinator.py",
    "*/codeintel/resolution/semantic.py",
    "*/codeintel/debug/python_trace_runner.py",
    "*/verification/verify_orchestration.py",
    "*/verification/checks/liveness_ratchet.py",
    "*/verification/checks/acceptance_corpus.py",
    "*/verification/checks/corpus_stale.py",
    "*/skills/registry.py",
]

[tool.coverage.report]
fail_under = 90
omit = [
    "*/cli/commands/graph_cmd.py",
    "*/cli/commands/plan.py",
    "*/cli/commands/map.py",
    "*/cli/commands/doctor.py",
    "*/cli/commands/hook.py",
    "*/cli/commands/integrate.py",
    "*/codeintel/sync/coordinator.py",
    "*/codeintel/resolution/semantic.py",
    "*/codeintel/debug/python_trace_runner.py",
    "*/verification/verify_orchestration.py",
    "*/verification/checks/liveness_ratchet.py",
    "*/verification/checks/acceptance_corpus.py",
    "*/verification/checks/corpus_stale.py",
    "*/skills/registry.py",
]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/devcouncil", "src/semantic_layer"]

[tool.hatch.build.targets.wheel.force-include]
"src/devcouncil/llm/model_defaults.yaml" = "devcouncil/llm/model_defaults.yaml"
"src/devcouncil/telemetry/model_pricing.yaml" = "devcouncil/telemetry/model_pricing.yaml"
"src/devcouncil/assets/devcouncil-logo.svg" = "devcouncil/assets/devcouncil-logo.svg"
"src/devcouncil/assets/devcouncil_logo_premium.png" = "devcouncil/assets/devcouncil_logo_premium.png"
"src/devcouncil/assets/vendor/force-graph.min.js" = "devcouncil/assets/vendor/force-graph.min.js"
"src/devcouncil/integrations/opencode_devcouncil_plugin.mjs" = "devcouncil/integrations/opencode_devcouncil_plugin.mjs"
"src/devcouncil/campaign/prompts/coordinator.md" = "devcouncil/campaign/prompts/coordinator.md"
"src/devcouncil/campaign/prompts/director.md" = "devcouncil/campaign/prompts/director.md"
"src/devcouncil/campaign/prompts/protocol.md" = "devcouncil/campaign/prompts/protocol.md"
"src/devcouncil/campaign/prompts/reviewer.md" = "devcouncil/campaign/prompts/reviewer.md"
"src/devcouncil/campaign/prompts/worker.md" = "devcouncil/campaign/prompts/worker.md"
